# geodata-chatbot

./: .gitignore  README.md  agent.py  app.py  point_cloud_viewer.html  pyproject.toml  requirements.txt  run_streamlit.py
.streamlit/: config.toml
DATA/: demo_scene_c.usda  demo_scene_c_minimal.usda  indoor_room_labelled_minimal.csv  indoor_room_labelled_sparse.csv
geo_service/: app.py  basic_agent.py
src/: auth.py  client.py  streamlit_app.py  styles.css  tui_client.py
src/agent/: __init__.py  graph.py  mining_tools.py
src/components/: __init__.py  point_cloud_viewer.py
src/components/templates/: point_cloud_viewer.html
src/utils/: __init__.py  config.py
tests/: conftest.py
tests/integration_tests/: test_graph.py
tests/unit_tests/: test_agent_graph.py  test_configuration.py
