[project]
name = "agent"
version = "0.0.1"
description = "LangGraph agent for chatting with geodata"
authors = [
   ]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=0.3.32",
    "langgraph>=0.2.6",
    "python-dotenv>=1.0.1",
    "textual>=6.1.0",
    "streamlit>=1.28.0",
    "open3d>=0.19.0",
    "networkx>=3.2.1",
    "scikit-learn>=1.6.1",
    "matplotlib>=3.9.4",
    "usd-core>=25.8",
    "langchain-community>=0.3.29",
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.agent", "agent"]
[tool.setuptools.package-dir]
"langgraph.templates.agent" = "src/agent"
"agent" = "src/agent"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "anyio>=4.7.0",
    "langgraph-cli[inmem]>=0.2.8",
    "mypy>=1.13.0",
    "pytest>=8.3.5",
    "ruff>=0.8.2",
]
